// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`codetypo-config > edit config 1`] = `
"{
  "name": "test-package",
  "codetypo": {
    "words": [
      "apple",
      "banana"
    ]
  }
}
"
`;

exports[`codetypo-config > edit config 2`] = `
"{
  "name": "test-package",
  "codetypo": {
    "words": [
      "apple"
    ]
  }
}
"
`;

exports[`codetypo-config > edit config 3`] = `
"{
    // file version
    "version": "0.2",
    "words": [
        "angle", // with comment
        "apple",
        // Before "before"
        "before",
        "cache",
        "zebra" // zebra comment
    ]
}
"
`;

exports[`codetypo-config > edit config 4`] = `
"version: "0.2"
words:
  - angle
  - apple
  - before
  - cache
  - zebra
"
`;
